Fri Jun  3 21:27:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): rb_str_conv_enc() never set encoding
	  of the source string, but returns the string itself if the
	  conversion failed.  then the instance variable does not need to
	  be set again.

Fri Jun  3 18:04:37 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): need to duplicate path before passing it to
	  rb_str_conv_enc() because the function might call rb_enc_associate()
	  internally.  this fixes test failures on Windows introduced at r55260.

Fri Jun  3 17:44:25 2016  Reiner Herrmann  <reiner@reiner-h.de>

	* lib/mkmf.rb (create_makefile): sort lists of source and object
	  files in generated Makefile, unless given by extconf.rb.
	  [Fix GH-1367]

Thu Jun  2 21:18:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (get_special_folder): use SHGetPathFromIDListEx if
	  available instead of old SHGetPathFromIDListW, to check the
	  buffer size.

Thu Jun  2 17:05:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): remove MAXPATHLEN restriction
	  for Windows 10.

Thu Jun  2 16:51:35 2016  Koichi ITO  <koic.ito@gmail.com>

	* misc/ruby-mode.el (ruby-here-doc-beg-re),
	  (ruby-here-doc-beg-match, ruby-parse-partial): Support for
	  `squiggly heredoc' syntax in ruby-mode.  [Fix GH-1372]

Thu Jun  2 10:24:48 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Raise ArgumentError when invalid string is detected in
	  case mapping methods.

	* enc/unicode.c: Check for invalid string and signal with negative
	  length value.

	* test/ruby/enc/test_case_mapping.rb: Add tests for above.

	* test/ruby/test_m17n_comb.rb: Add a message to clarify test failure.

Wed Jun  1 21:41:05 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Check existence of ASN1_TIME_adj(). The old
	  ASN1_TIME_set() is not Year 2038 ready on sizeof(time_t) == 4
	  environment. This function was added in OpenSSL 1.0.0.